# purplepincher-shell-library

./: .gitignore  AGI-IMPLICATIONS.md  CLOUDFLARE-AI-FUNNEL.md  CLOUDFLARE-DEPLOY.md  CRAB-TRAP-README.md  CRITIQUE-AND-SPEC.md  EXPANSION-NOTES.md  EXTERNAL-EQUIPPING-PAPER.md  KIMI-DEEP-ANALYSIS.md  LOCK-README.md  LOCK-RESEARCH.md  ML-PIPELINE-README.md  MODEL-API-KNOWLEDGE.md  PROMPTING-IS-ALL-YOU-NEED.md  PURPLEPINCHER.md  README.md  SELF-DIRECTED-EXPERIMENT.md  pyproject.toml
purplepincher/: __init__.py  agent.py  registry.py  shell.py  vessel.py
src/: vessel.py
tests/: test_agent.py  test_registry.py  test_vessel.py
