[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "purplepincher-shell-library"
version = "0.1.0"
description = "Agent shell library: agent/vessel separation for context compaction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/SuperInstance/purplepincher-shell-library"
Repository = "https://github.com/SuperInstance/purplepincher-shell-library"

[tool.setuptools.packages.find]
where = ["."]
include = ["purplepincher*"]
